--- a/index.html
+++ b/index.html
@@ -1,65 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Moda Tekstil</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Moda Tekstil</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Moda Tekstil</h1>
-    <nav>
-      <a href="#home">Anasayfa</a>
-      <a href="#products">Ürünler</a>
-      <a href="#about">Hakkımızda</a>
-      <a href="#contact">İletişim</a>
-    </nav>
-  </header>
-
-  <section id="home">
-    <h2>Yeni Sezon Ürünleriyle Tanışın</h2>
-    <p>Şıklığın ve kalitenin adresi: Moda Tekstil</p>
-  </section>
-
-  <section id="products">
-    <h2>Ürünlerimiz</h2>
-    <div class="product-list">
-      <div class="product">
-        <img src="urun1.jpg" alt="T-shirt" width="200">
-        <h3>Bayan T-shirt</h3>
-        <p>₺129.90</p>
-      </div>
-      <div class="product">
-        <img src="urun2.jpg" alt="Elbise" width="200">
-        <h3>Yazlık Elbise</h3>
-        <p>₺249.90</p>
-      </div>
-      <div class="product">
-        <img src="urun3.jpg" alt="Pantolon" width="200">
-        <h3>Kot Pantolon</h3>
-        <p>₺189.90</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="about">
-    <h2>Hakkımızda</h2>
-    <p>Moda Tekstil olarak 15 yıldır kaliteli ve uygun fiyatlı ürünler sunuyoruz.</p>
-  </section>
-
-  <section id="contact">
-    <h2>İletişim</h2>
-    <form>
-      <input type="text" placeholder="Adınız" required>
-      <input type="email" placeholder="E-posta" required>
-      <textarea placeholder="Mesajınız"></textarea>
-      <button type="submit">Gönder</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Moda Tekstil. Tüm hakları saklıdır.</p>
-  </footer>
+    <header>
+        <h1>Moda Tekstil Mağazası</h1>
+    </header>
+    <main>
+        <section class="urunler">
+            <div class="urun">
+                <img src="urun1.jpg" alt="Ürün 1">
+                <h2>T-Shirt</h2>
+                <p>Rahat pamuklu tişört</p>
+            </div>
+            <div class="urun">
+                <img src="urun2.jpg" alt="Ürün 2">
+                <h2>Kazak</h2>
+                <p>Sıcak tutan kazak modeli</p>
+            </div>
+            <div class="urun">
+                <img src="urun3.jpg" alt="Ürün 3">
+                <h2>Elbise</h2>
+                <p>Yazlık çiçekli elbise</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
